<resources>
    <string name="app_name">UserProfileInfo</string>
    <string name="title_profile_info">Profile Info</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="age">Age</string>
    <string name="save">save</string>
    <string name="clear">clear</string>
</resources>